--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,29 @@
 	<artifactId>jpa-javatime</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<description>Converters to use java.time classes with JPA</description>
 
 	<name>jpa-javatime</name>
 	<url>https://github.com/garcia-jj/jpa-javatime</url>
+
+	<licenses>
+		<license>
+			<distribution>repo</distribution>
+			<name>Apache License, Version 2.0</name>
+			<url>http://apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Otávio S Garcia</name>
+			<id>garcia-jj</id>
+			<roles>
+				<role>owner</role>
+				<role>developer</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
